refactor(frontend): fix ui

--- a/public/app/views/signUp.html
+++ b/public/app/views/signUp.html
@@ -1,4 +1,4 @@
-<div ng-controller= "homeCtrl">
+<div ng-controller= "homeCtrl" class="container">
   <div class="background-image"></div>
   <h2 class="animated infinite bounce" id="title" layout="row" layout-sm="column"layout-align="center center">Document Management System</h2>
   <div class="content" layout-sm="column" layout-gt-sm="column" layout wrap>
