--- a/public/assets/css/stylesheet.css
+++ b/public/assets/css/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #000 !important;
+  background-color: black
 }
 
 .body-scroll {
@@ -37,6 +37,10 @@ body {
     width: 100%;
     margin: 0 auto;
   }
+
+  .profCard {
+    width: 80% !important;
+  }
 }
 
 @media only screen and (min-width: 601px){
@@ -57,6 +61,10 @@ body {
 
   #right {
     margin-left: 50%;
+  }
+
+  .profCard {
+    width: 80% !important;
   }
 }
 
@@ -179,4 +187,20 @@ body {
 
 #repeat {
   overflow: hidden;
+}
+
+.profCard {
+  padding-left: 2em;
+}
+
+.drop-down {
+  height: 80px
+}
+
+.md-open-menu-container  {
+  height : 96px;
+}
+
+.account {
+  width: 116px !important; 
 }
