refactor(codebase) - add semicolon - refactor build process and add lint as nodemon task - add comments and new state - add comments and add function to show document details - add comments - edit frontend - add new view for more details on a document

--- a/public/app/views/document.html
+++ b/public/app/views/document.html
@@ -1,69 +1,39 @@
-<div ng-controller= "docCtrl" data-ng-init="getDocuments()">
-  <div class="top-nav">
-    <nav class="nav-div">
-      <div class="md-toolbar-tools" layout="row">
-        <div flex="80">
-          <md-button ui-sref="createdocument" aria-label="Settings">
-            Create Document
-          </md-button>
-            <md-button ui-sref="documents" aria-label="Settings">
-              Your Documents
-            </md-button>
-        </div>
-        <div >
-          <md-menu md-position-mode="target-right target">
-            <md-button aria-label="Open demo menu" class="md-icon-button account" ng-click="$mdOpenMenu($event)">
-              Your Account
-            </md-button>
-            <md-menu-content width="4" class="drop-down">
-              <md-menu-item layout="column">
-                <md-button ui-sref="userprofile">
-                    <div layout="row">
-                      <p flex>Your profile</p>
-                    </div>
-                </md-button>
-                <md-button ng-click="logout()">
-                    <div layout="row">
-                      <p flex>Logout</p>
-                    </div>
-                </md-button>
-              </md-menu-item>
-            </md-menu-content>
-          </md-menu>
-        </div>
-      </div>
-     </nav>
+<md-content class="md-padding doc-content" ng-controller= "docCtrl" data-ng-init="getDocuments()">
+  <span class="md-display-2" id="headerText"><strong>My Documents</strong></span>
+  <div ng-if="!userDocs.length" layout-align="center">
+    <h2>You have not created any documents yet!</h2>
+    <span ui-sref="nav.createdocument">Click <strong>here</strong> to create your first Document!</span>
   </div>
-  <md-content class="md-padding">
-    <h4 class="md-display-2" id="headerText"><strong>View Documents</strong></h4>
-    <div layout="row" layout-sm="column"  layout-fill layout-align="top center" layout-wrap>
-			<div ng-repeat="userDoc in userDocs">
-				<md-card id="card">
-				  <md-card-content>
-			      <div id="docName"><h2><p><strong>{{userDoc.title | uppercase}}</strong></p></h2></div>
-			      <p>{{userDoc.content}}</p>
-            <div id="tooltip">
-              <div><p>{{userDoc.dateCreated | date:'medium' | uppercase}}</p></div>
-	            <md-button class="md-fab left" aria-label="Edit Document" ng-click="getCurrentDocument(userDoc)">
-					      <i class="fa fa-pencil-square-o"></i>
-					      <md-tooltip md-visible="demo.showTooltip">
-					        Edit Document
-					      </md-tooltip>
-					    </md-button>
-					    <md-button class="md-fab left" aria-label="Delete Document" ng-click="showConfirm($event, userDoc._id)">
-					      <i class="fa fa-trash-o"></i>
-					      <md-tooltip md-visible="demo.showTooltip">
-					        Delete Document
-					      </md-tooltip>
-					    </md-button>
-					  </div>
-				  </md-card-content>
-				</md-card>
-			</div>
-    </div>
-    <div ng-if="!userDocs.length" layout-align="center">
-		    <h2>You have not created any documents yet!</h2>
-		    <span ui-sref="createdocument">Click <strong>here</strong> to create your first Document!</span>
-		  </div>
-  </md-content>
-</div>
+  <div layout-gt-sm="row" layout-fill layout-align="top center" layout-wrap>
+		<div ng-repeat="userDoc in userDocs">
+			<md-card id="card">
+			  <md-card-content>
+		      <div id="docName"><h2><p><strong>{{userDoc.title | uppercase}}</strong></p></h2></div>
+          <p ng-if="(userDoc.content).length >= 20">{{(userDoc.content).substring(0, 70)+'...'}}</p>
+          <p ng-if="(userDoc.content).length < 20">{{userDoc.content}}</p>
+          <div id="tooltip">
+            <div><p>{{userDoc.dateCreated | date:'medium' | uppercase}}</p></div>
+            <md-button class="md-fab left" aria-label="see more" ng-click="getDocDetails(userDoc)">
+              <i class="fa fa-expand"></i>
+              <md-tooltip md-visible="demo.showTooltip">
+                See more
+              </md-tooltip>
+            </md-button>
+            <md-button class="md-fab left" aria-label="Edit Document" ng-click="getCurrentDocument(userDoc)">
+				      <i class="fa fa-pencil-square-o"></i>
+				      <md-tooltip md-visible="demo.showTooltip">
+				        Edit Document
+				      </md-tooltip>
+				    </md-button>
+				    <md-button class="md-fab left" aria-label="Delete Document" ng-click="showConfirm($event, userDoc._id)">
+				      <i class="fa fa-trash-o"></i>
+				      <md-tooltip md-visible="demo.showTooltip">
+				        Delete Document
+				      </md-tooltip>
+				    </md-button>
+				  </div>
+			  </md-card-content>
+			</md-card>
+		</div>
+  </div>
+</md-content>
